--- a/index.html
+++ b/index.html
@@ -8,11 +8,34 @@
     <title>Portfolio Joeil Mohali</title>
 </head>
 <body>
-
-    <div class="infos">
-        <h2>Joeil Mohali</h2>
-        <h3>Développeur Web</h3>
+    <div class="accueil">
+        <h2 class="name"></h2>
+        <h3 class="program"></h3>
+        <div class="arrow-bottom_index"></div>
+    </div>
+    <div class="page_projets">
+        <h2 class="title_projet">Mes projets</h2>
+        <div class="projets">
+            <div class="projet1">
+                <p class="titleSection">RPG-Tic</p>
+                <p class="title_SousSection">Python</p>
+                <p class="title_SousSection">Kivy</p>
+                <button class="btnlienGithub">GitHub</button>
+            </div>
+            <div class="projet2">
+                <p class="titleSection">Hecatombe</p>
+                <p class="title_SousSection">CSS</p>
+                <p class="title_SousSection">Javascript</p>
+                <button class="btnlienGithub">GitHub</button>
+            </div>
+        </div>
+        <div class="arrow-bottom_project"></div>
+    </div>
+    <div class="page_me">
+        <h2 class="title_me">Et moi dans tout ça ?</h2>
     </div>
 
 </body>
+<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+<script src="app.js"></script>
 </html>
