--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Portfolio Joeil Mohali</title>
+    <title>Joeil Mohali</title>
 </head>
 <body>
     <div class="accueil">
@@ -42,12 +42,16 @@
     <div class="page_me">
         <h2 class="title_me">Et moi dans tout ça ?</h2>
         <div class="description_moi">
-            <p>Actuellement en 1ère année à Hetic en Bachelor Développeur Web. 
-                Je suis à la recherche d'un stage de 3 mois pour parfaire les compétences acquises au seins de ma première année de formation. 
-                Le numérique m'a toujours intéressé et je me suis naturellement dirigé vers ces métiers, et plus particulièrement développeur Web.
-                Ma curiosité, mon ouverture d'esprit et ma détermination sont des qualités qui me décrivent et 
+            <p>Actuellement en 1ère année à <strong>Hetic</strong> en Bachelor Développeur Web. 
+                Je suis à la recherche d'un <strong>stage de 3 mois</strong> pour parfaire les compétences acquises au seins de ma première année de formation. 
+                Le numérique m'a toujours intéressé et je me suis naturellement dirigé vers ces métiers, et plus particulièrement celui de développeur Web.
+                <strong>Ma curiosité, mon ouverture d'esprit et ma détermination</strong> sont des qualités qui me décrivent et 
                 qui me seront d'une grande aide pour appréhender les problématiques du métier ! 
             </p>
+        </div>
+        <div class="divCompetences">
+            <h3 class="title_competences">Compétences</h3>
+            <p class="Competences">HTML, CSS, Javascript, Python, LUA, SQL</p>
         </div>
 
     </div>
